- Flasm 1.62 - http://flasm.sourceforge.net
- Gifsicle 1.87 - http://www.lcdf.org/gifsicle/
- Ghostcript 9.15 - http://www.ghostscript.com
- GNU Strip 2.25 - http://www.gnu.org/software/binutils/
- ImageMagick 6.9.12 - http://www.imagemagick.org
- ImageWorsener 1.2.0 - http://entropymine.com/imageworsener
- jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
- jpegoptim 1.4.3 beta - http://www.kokkonen.net/tjko/projects.html
- jpegtran 9 - http://jpegclub.org/jpegtran/
- jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
- Leanify 0.4.2.45 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
- libwebp 0.4.3 - http://www.webmproject.org
- mkclean 0.8.7 - http://www.matroska.org/downloads/mkclean.html
- mozjpeg 3.10 - https://github.com/mozilla/mozjpeg
- MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
- mp4v2 2.0.0 r504 - https://code.google.com/p/mp4v2/
- OptiPNG Hg 20121021 - http://optipng.sourceforge.net
- PCXLite 1.0 - http://sol.gfxile.net/code.html
- PngOptimizer 2.4.1 - http://psydk.org/PngOptimizer
- PETrim 4.00 beta - http://pecompact.com/pesuite.php
- PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
- pngquant 2.4.0 - http://www.pngquant.org
- pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.5.0.4 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XX - YYYY
- Fixed an incompatibility with Windows XP introduced in 7.50 by unsupported COPY_FILE_NO_BUFFERING flag that makes CopyFileEx API function fail (Vivil).
- Updated Leanify 0.4.2.45 daily binaries.
- Updated mozjpeg to 3.10.


7.70 - 2015/05/17
- Added a new PNG option to optionalally allow lossy PNG recompression support with pngquant 2.4.0 (Jack Cherng).